--- a/index.html
+++ b/index.html
@@ -1,89 +1,67 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
 <title>Time Travela</title>
 <style>
 
 body {
     background-color: darkslategrey;
-    padding: 50px;
+    padding: 0px;
     color: #ffffff;
     margin: 0;
+    overflow: hidden;
+    margin-top: 0;
 }
 
 #main {
-    text-align: center;
-    background-color: black;
-    height: 400px;
-    border-radius: 20px;
-    color: white;
-    font-weight: 800;
-    padding-top: 50px;
-    padding: 5px;
-    margin-top: 5px;
+text-align: center;
+background-color: black;
+margin: auto;
+width: 100%;
+height: 300px;
+border-radius: 20px;
+color: white;
+font-weight: bold;
+padding-top: 0;
 }
 
 #root {
     font-variant: small-caps;
     color: goldenrod;
+}
 
-}
-#body {
-    color: white;
-    font-size: large;
-}
-.reload {
-    background-color: darkcyan;
-    border-radius: 3px;
-    border-style:none;
-    color: white;
-    padding: 5px;
-}
-.reload:hover {
-    background-color: blue;
-}
+
 #switch {
-    color:goldenrod;
-    font-size: medium;
-    padding-top: 40px;
+padding-top: 0;
 }
-#mySwitch {
-    background-color: darkcyan;
-    border-radius: 3px;
-    border-style:none;
-    color: white;
-    padding: 5px;
 
+#mainBody {
+    padding: 10px;
+    padding-right: 18px;
 }
-#mySwitch:hover {
-    background-color: blue;
-    font-size: medium;
-}
-.form {
-    text-align: center;
-}
+
 input{
     border-radius: 3px;
     color: white;
     padding: 2px;
+    width: 100%;
     border: none;
     background: transparent;
     box-shadow: 0.5px 0.3px 1px 2px #7f828b;
+
 }
-input:hover {
-    background-color:#7f828b;
-}
-#helper {
-    font-weight: bold;
-    font-style: oblique;
-    font-size: 17px;
-    
+.right {
+    padding-right: 10px;
+    float: right;
 }
 #goBtn,#trigger {
-    box-shadow: 0.5px 0.3px 1px 2px #024af7;
+    width: 30%;
+    box-shadow: 1px 0.5px 0.5px 2px #024af7;
     margin-top: 8px;
-    padding: 2px;
-    margin-left: 3px;
+    padding: 5px;
+    margin-left: 0;
     cursor: pointer;
 }
 #goBtn:hover,#trigger:hover {
@@ -91,7 +69,227 @@ input:hover {
     color: white;
     font-weight: bold;
 }
+#body {
+    color: blue;
+    font-size: 4vw;
+
+}
+h1 {
+    font-variant: small-caps;
+}
+
+.reload {
+background-color: darkcyan;
+border-radius: 3px;
+border-style:none;
+color: white;
+padding: 5px;
+}
+.reload:hover {
+background-color: blue;
+}
+#switch {
+color:goldenrod;
+font-size: medium;
+padding-top: 40px;
+}
+#mySwitch {
+background-color: darkcyan;
+border-radius: 3px;
+border-style:none;
+color: white;
+padding: 5px;
+
+}
+#mySwitch:hover {
+background-color: blue;
+font-size: medium;
+}
+.form {
+text-align: center;
+}
+
+input:hover {
+background-color:#7f828b;
+}
+#helper {
+font-weight: bold;
+font-style: oblique;
+font-size: 17px;
+}
 .nav {
+position: fixed;
+z-index: 100000;
+width: 140px;
+display: none;
+border-radius: 2px;
+background-color: #081a4e;
+padding: 5px;
+margin-right: 10px;
+margin-left: auto; 
+right: 0;
+left: auto;
+overflow: auto;
+}
+.menu {
+color: white;
+width: 100%;
+height: auto;
+}
+.left {
+float: left;
+padding: 3px;
+color: white;
+font-variant: small-caps;
+}
+.clickable {
+cursor: pointer;
+padding: 5px;
+}
+.active {
+background-color: cadetblue;
+}
+
+.clickable:hover {
+background-color: #024af7;
+padding: 10px;
+}
+.sticky {
+background-color: #081a4e;
+border-radius: 5px; 
+color: white; 
+font-weight: bold;  
+padding: 5px; 
+position: sticky; 
+top: 0%; 
+width: 100%; 
+z-index: 1000;
+height: 30px;
+padding-top: 10px;
+padding-bottom: 0;
+}
+a {
+margin-left: 10px;
+text-decoration: none;
+padding: 5px;
+color: white;
+border-radius: 3px
+}
+a:hover {
+background-color: #024af7;
+color:black;
+
+}
+#menuBtn {
+border-radius: 2px;
+cursor:pointer;
+background-color: #8d97b4;
+}
+#menuBtn:hover {
+background-color: #636c86;
+font-size: medium;
+}
+.activeNav {
+background-color: #2545a3;
+color: #081a4e;
+}
+#sticyContainer {
+text-align: center;
+position: sticky; 
+top: 0%; 
+width: 100%; 
+z-index: 1000;
+}
+@media only screen and (max-width: 339px) {
+    .left {
+        display: none;
+    }
+    #helper {
+        font-size: 5vw;
+    }
+    .nav {
+    width: 100px;
+    padding: 3px;
+    margin-right: 5px;
+
+    }
+   
+}
+
+@media only screen and (min-width: 700px) {
+    #body {
+    color: white;
+    font-size: large;
+    }
+        #main {
+    margin: auto;
+    width: 85%;
+    height: 400px;
+    border-radius: 20px;
+
+    }
+    .reload {
+    background-color: darkcyan;
+    border-radius: 3px;
+    border-style:none;
+    color: white;
+    padding: 5px;
+    }
+    .reload:hover {
+    background-color: blue;
+    }
+    #switch {
+    color:goldenrod;
+    font-size: medium;
+    padding-top: 40px;
+    }
+    #mySwitch {
+    background-color: darkcyan;
+    border-radius: 3px;
+    border-style:none;
+    color: white;
+    padding: 5px;
+
+    }
+    #mySwitch:hover {
+    background-color: blue;
+    font-size: medium;
+    }
+    .form {
+    text-align: center;
+    }
+    input{
+    border-radius: 3px;
+    color: white;
+    padding: 2px;
+    border: none;
+    background: transparent;
+    box-shadow: 0.5px 0.3px 1px 2px #7f828b;
+    width: fit-content;
+    }
+    input:hover {
+    background-color:#7f828b;
+    }
+    #helper {
+    font-weight: bold;
+    font-style: oblique;
+    font-size: 17px;
+
+    }
+    #goBtn,#trigger {
+    box-shadow: 0.5px 0.3px 1px 2px #024af7;
+    margin-top: 8px;
+    padding: 2px;
+    margin-left: 3px;
+    cursor: pointer;
+    width: fit-content;
+    }
+    #goBtn:hover,#trigger:hover {
+    background-color: #024af7;
+    color: white;
+    font-weight: bold;
+    }
+    .nav {
     position: fixed;
     z-index: 100000;
     width: 140px;
@@ -99,39 +297,40 @@ input:hover {
     border-radius: 2px;
     background-color: #081a4e;
     padding: 5px;
-    margin-right: 55px;
+    margin-right: 150px;
     margin-left: auto; 
     right: 0;
     left: auto;
     overflow: auto;
-}
-.menu {
+    }
+    .menu {
     color: white;
     width: 100%;
     height: auto;
-}
-.right {
+    }
+    .right {
     float: right;
-}
-.left {
+    }
+    .left {
     float: left;
     padding: 3px;
     color: white;
     font-variant: small-caps;
-}
-.clickable {
+    }
+    .clickable {
     cursor: pointer;
     padding: 5px;
-}
-.active {
+    }
+    .active {
     background-color: cadetblue;
-}
+    }
 
-.clickable:hover {
+    .clickable:hover {
     background-color: #024af7;
     padding: 10px;
-}
-.sticky {
+    }
+    .sticky {
+    margin: auto;
     background-color: #081a4e;
     border-radius: 5px; 
     color: white; 
@@ -139,108 +338,51 @@ input:hover {
     padding: 5px; 
     position: sticky; 
     top: 0%; 
-    width: 100%; 
+    width: 82%; 
     z-index: 1000;
     height: 30px;
     padding-top: 10px;
     padding-bottom: 0;
-}
-a {
+    }
+    a {
     margin-left: 10px;
     text-decoration: none;
     padding: 5px;
     color: white;
     border-radius: 3px
-}
-a:hover {
+    }
+    a:hover {
     background-color: #024af7;
     color:black;
 
-}
-#menuBtn {
+    }
+    #menuBtn {
     border-radius: 2px;
     cursor:pointer;
     background-color: #8d97b4;
-}
-#menuBtn:hover {
+    }
+    #menuBtn:hover {
     background-color: #636c86;
     font-size: medium;
-}
-.activeNav {
+    }
+    .activeNav {
     background-color: #8d97b4;
     color: #081a4e;
-}
-#sticyContainer {
+    }
+    #sticyContainer {
     text-align: center;
     position: sticky; 
     top: 0%; 
     width: 100%; 
     z-index: 1000;
-}
-@media only screen and (max-width: 700px) {
-        body{
-            padding: 10px;
-            overflow: hidden;
-        }
-        #switch {
-        padding-top: 0;
-        }
-        body {
-            padding: 3px;
-        }
-        #mainBody {
-            padding: 10px;
-            padding-right: 18px;
-        }
-        #main {
-        text-align: center;
-        background-color: black;
-        margin: auto;
-        width: 100%;
-        height: 300px;
-        border-radius: 20px;
-        color: white;
-        font-weight: bold;
-        padding-top: 0;
-        }
-    input{
-        border-radius: 3px;
-        padding: 2px;
-        width: 100%;
-        border: none;
-        background: transparent;
-        box-shadow: 0.5px 0.3px 1px 2px #7f828b;
-
-    }
-    .right {
-        padding-right: 10px;
-    }
-    #goBtn,#trigger {
-        width: 30%;
-        box-shadow: 1px 0.5px 0.5px 2px #024af7;
-        margin-top: 8px;
-        padding: 5px;
-        margin-left: 0;
-    }
-    #goBtn:hover,#trigger:hover {
-        background-color: #024af7;
-        color: white;
-        font-weight: bold;
-    }
-    #body {
-        color: blue;
-        font-size: 4vw;
-
-    }
-    h1 {
-        font-variant: small-caps;
     }
 }
+
 </style>
 </head>
 <body>
 <div class="container">
-    <h1 id="mainHead" style="text-align: center;">Time Travela</h1>
+    <h1 id="mainHead" style="text-align: center;color: black;">Time <span style="color: whitesmoke;">Travel<span style="color: black;">a</span></h1>
 <div class="sticky">
 <div class="menu"><div class="left" id="left"><a class="activeNav" href="#">Home</a><a  onclick="switchProgram()" href="#">Age Calculator</a><a href="https://www.iamtsquare07.com/#portfolio" target="_blank">Portfolio</a></div><div class="right"><button  id="menuBtn">|||</button></div></div>
 </div>
@@ -271,7 +413,6 @@ a:hover {
 </div>
 </div>
 </div>
-
 <script src="yourAge.js"></script>
 
 </body>
