--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@ top: 0%;
 width: 100%; 
 z-index: 1000;
 }
+/*Responsive Styles */
 @media only screen and (max-width: 339px) {
     .left {
         display: none;
