--- a/index.html
+++ b/index.html
@@ -12,15 +12,32 @@ body {
     color: #ffffff;
     margin: 0;
     overflow: hidden;
+    overflow-y: scroll;
     margin-top: 0;
 }
+#Ai {
+-webkit-animation-name: fade;
+-webkit-animation-duration: 2s;
+animation-name: fade;
+animation-duration: 10s;
+}
 
+@-webkit-keyframes fade {
+  from {opacity: .1} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .1} 
+  to {opacity: 1}
+}
 #main {
 text-align: center;
 background-color: black;
 margin: auto;
 width: 100%;
-height: 300px;
+height: auto;
+min-height: 300px;
 border-radius: 20px;
 color: white;
 font-weight: bold;
@@ -70,7 +87,7 @@ input{
     font-weight: bold;
 }
 #body {
-    color: white !important;
+    color: blue;
     font-size: 4vw;
 
 }
@@ -200,6 +217,28 @@ top: 0%;
 width: 100%; 
 z-index: 1000;
 }
+.h1span {
+    color: whitesmoke;
+}
+.h1span2 {
+    color: black;
+}
+#mainHead {
+text-align: center;
+color: black;
+}
+table {
+    border-collapse: collapse;
+    margin: auto;
+    width: 80%;
+    border: 1px solid #586383;
+    color: #cad6fa;
+    font-weight: 600;
+    border-radius: 3px;
+    text-align: left;
+}
+tr:nth-child(odd){background-color: #8d97b4;border-radius: 3px;}
+tr:hover {background-color: rgb(125, 143, 241);}
 /*Responsive Styles */
 @media only screen and (max-width: 339px) {
     .left {
@@ -225,7 +264,8 @@ z-index: 1000;
         #main {
     margin: auto;
     width: 85%;
-    height: 400px;
+    height: auto;
+    min-height: 400px;
     border-radius: 20px;
 
     }
@@ -383,7 +423,7 @@ z-index: 1000;
 </head>
 <body>
 <div class="container">
-    <h1 id="mainHead" style="text-align: center;color: black;">Time <span style="color: whitesmoke;">Travel<span style="color: black;">a</span></h1>
+    <h1 id="mainHead">Time <span class="h1span">Travel<span class="h1span2">a</span></h1>
 <div class="sticky">
 <div class="menu"><div class="left" id="left"><a class="activeNav" href="#">Home</a><a  onclick="switchProgram()" href="#">Age Calculator</a><a href="https://www.iamtsquare07.com/#portfolio" target="_blank">Portfolio</a></div><div class="right"><button  id="menuBtn">|||</button></div></div>
 </div>
@@ -409,11 +449,12 @@ z-index: 1000;
     </div>
     <br>
     <br>
-    <br>
     <div id="switch"></div>
+    
 </div>
 </div>
 </div>
+<div style=" background-color: #024af7;padding: 5px;margin: auto;width: fit-content;border-radius: 4px;"><a style="padding-left: 0px;" href="https://www.facebook.com/sharer/sharer.php?u=https://iamtsquare07.github.io/" target="_blank">SHARE</a></div>
 <script src="yourAge.js"></script>
 
 </body>
