--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ tr:hover {background-color: rgb(125, 143, 241);}
 
 /* Popup-specific styles */
 .myModal {
-    background: darkblue;
+    background: black;
     padding: 10px;
     border-radius: 3px;
     text-align: center;
@@ -472,7 +472,7 @@ tr:hover {background-color: rgb(125, 143, 241);}
     <div class="exit-intent-popup">
         <div class="myModal">
             <h4 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;color: goldenrod;font-variant: small-caps;">Are you leaving?</h4>
-            <p>I will miss you😥 <br><br>But wait, have you taken a screenshot of your time travel profile?
+            <p>I will miss you😥 <br><img width="80px" height: auto; src="https://www.seekpng.com/png/full/560-5609130_free-boss-baby-pngs-boss-baby-no-background.png"></img><br>But wait, have you taken a screenshot of your time travel profile?
             <br>Even if you don't want to show me to your friends, atleast to remember me.😍
             </p>
             <span class="close">x</span>
