--- a/index.html
+++ b/index.html
@@ -164,8 +164,9 @@ font-variant: small-caps;
 cursor: pointer;
 padding: 5px;
 }
-.clickable a {
+.clickable  a{
     padding: 0px;
+    padding-left: 0px;
 }
 .active {
 background-color: cadetblue;
@@ -190,7 +191,7 @@ padding-top: 10px;
 padding-bottom: 0;
 }
 a {
-margin-left: 10px;
+margin-left: 0px;
 text-decoration: none;
 padding: 5px;
 color: white;
@@ -500,7 +501,7 @@ tr:hover {background-color: rgb(125, 143, 241);}
         <label>Current Age</label>
         <input id="age" type="number" value="23" required>
         <label>Travel To</label>
-        <input id="year" type="number" value="2100" required>
+        <input id="year" type="number" value="2070" required>
         <input id="goBtn" onclick="process()" type="button" value="Go">
     </form>
 </div>
