--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ padding-top: 0;
 
 #mainBody {
     padding: 10px;
-    padding-right: 18px;
+    padding-right: 10px;
 }
 
 input{
@@ -90,7 +90,10 @@ input{
 #body {
     color: #cad6fa !important;
     font-size: 4vw;
-
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 2s;
+    animation-name: fade;
+    animation-duration: 30s;
 }
 h1 {
     font-variant: small-caps;
